# bazel_modules_test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
app/: BUILD.bazel  package.json
app/src/: index.ts
module/: BUILD.bazel  package.json  tsconfig.json
module/src/: index.ts
