package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"], exclude=["src/**/*.spec.ts"]),
    # data = ["package.json"],
    module_name = "@root/module",
    module_root = "src",
    deps = [
        "@npm//@bazel/typescript",
        "@npm//typescript"
    ]
)
